--- a/DrivingApp/res/layout/chart.xml
+++ b/DrivingApp/res/layout/chart.xml
@@ -8,6 +8,8 @@
                   android:layout_height="wrap_content">
 		<Button android:id="@+id/show_chart" android:text="@string/showChart"
                 android:layout_width="wrap_content" android:layout_height="wrap_content" />
+		<Button android:id="@+id/clear_data" android:text="@string/deleteData"
+                android:layout_width="wrap_content" android:layout_height="wrap_content" />
 	</LinearLayout>
 
     <LinearLayout android:id="@+id/chart_area" android:orientation="horizontal"
